--- a/index.html
+++ b/index.html
@@ -665,9 +665,12 @@
             journey to
             financial freedom
         </p>
-        <a href="/#contact" class="text-center bg-green-600 p-3 py-4 rounded-full md:text-3xl text-2xl text-white">
-            Yes, I want to achieve Financial Freedom
-        </a>
+       
+        <a href="#contact"
+        class="inline-block bg-green-600 text-white md:text-2xl font-bold px-12 py-6 rounded-xl shadow-lg hover:bg-teal-700 transform hover:-translate-y-1 transition-all duration-200">
+        Yes, I want to achieve Financial Freedom
+    </a>
+        
 
     </div>
     <!-- START: Why Choose Us Section -->
@@ -1537,7 +1540,7 @@
 
             <!-- CTA Button -->
             <div class="text-center">
-                <a href="#enrollment-form"
+                <a href="#contact"
                     class="inline-block bg-green-600 text-white md:text-2xl font-bold px-12 py-6 rounded-xl shadow-lg hover:bg-teal-700 transform hover:-translate-y-1 transition-all duration-200">
                     Yes, I Want to Learn Stock Trading in Malayalam
                 </a>
